--- a/cs229-2018-autumn/problem-sets/PS2/PS2-1 Logistic Regression - Training stability.ipynb
+++ b/cs229-2018-autumn/problem-sets/PS2/PS2-1 Logistic Regression - Training stability.ipynb
@@ -181,7 +181,7 @@
    }
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "source": [
     "From the code:\n",
     "\n",
@@ -231,10 +231,7 @@
     "in such way while minimizing $\\ell (\\theta)$."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
