--- a/cs229-2018-autumn/problem-sets/PS2/PS2-6 Spam classification.ipynb
+++ b/cs229-2018-autumn/problem-sets/PS2/PS2-6 Spam classification.ipynb
@@ -26,11 +26,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% code\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2024-10-24T06:05:42.649524900Z",
+     "start_time": "2024-10-24T06:05:42.357316800Z"
     }
    },
    "outputs": [],
@@ -39,8 +43,8 @@
     "\n",
     "import numpy as np\n",
     "\n",
-    "import problem_set_2.src.svm as svm\n",
-    "import problem_set_2.src.util as util"
+    "import src.svm as svm\n",
+    "import src.util as util"
    ]
   },
   {
@@ -475,9 +479,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cs229",
+   "name": "python3",
    "language": "python",
-   "name": "cs229"
+   "display_name": "Python 3 (ipykernel)"
   },
   "language_info": {
    "codemirror_mode": {
